fix navbar display on mobile devices

--- a/components/navbar/style.module.css
+++ b/components/navbar/style.module.css
@@ -98,9 +98,10 @@
         align-items: flex-start;
         flex-direction: column;
         max-height: 0;
-        overflow: hidden;
+        overflow: auto;
         transition: max-height 0.3s ease-out;
         flex-wrap: nowrap;
+        display: block;
     }
 
     .nav-link-list.expanded {
